# Strands

./: README.md  main.py  pyproject.toml  requirements.txt  timing.csv
src/strands_solver/: grid.py  puzzle_configs.py  search.py
strands/: main.py
strands/src/strands_solver/: heuristics.py  search.py
strands_solver/: __init__.py  heuristics.py  puzzle_configs.py  search.py  test_puzzles.py
tests/strands_solver/: test_grid.py
