[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands_solver"
version = "0.0.1"
authors = [
  { name="Emma Sun", email="emmagsun@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]